@@ -134,6 +134,7 @@ sub _preAddOuFailed
 sub _delOU
 {
     my ($self, $zentyalOU) = @_;
+
     $self->_sambaReady() or
         return;
 
@@ -393,27 +394,32 @@ sub _delUser
     EBox::debug("Deleting user '$dn' from samba");
     try {
         $sambaUser->deleteObject();
-
-        # Remove user from share ACL's
-        my $shares = $self->{samba}->model('SambaShares');
-        my $sharesIds = $shares->ids();
-        foreach my $shareId (@{$sharesIds}) {
-            my $shareRow = $shares->row($shareId);
-            my $acls = $shareRow->subModel('access');
-            my $aclsIds = $acls->ids();
-            foreach my $aclId (@{$aclsIds}) {
-                my $aclRow = $acls->row($aclId);
-                my $type = $aclRow->elementByName('user_group');
-                if ($type->selectedType() eq 'user' and
-                    $type->printableValue() eq $samAccountName) {
-                    $acls->removeRow($aclId);
-                }
-            }
-        }
+        $self->removeFromShareACLs($samAccountName);
     } otherwise {
         my ($error) = @_;
         EBox::error("Error deleting user: $error");
     };
+}
+
+sub removeFromShareACLs
+{
+    my ($self, $name) = @_;
+
+    my $shares = $self->{samba}->model('SambaShares');
+    my $sharesIds = $shares->ids();
+    foreach my $shareId (@{$sharesIds}) {
+        my $shareRow = $shares->row($shareId);
+        my $acls = $shareRow->subModel('access');
+        my $aclsIds = $acls->ids();
+        foreach my $aclId (@{$aclsIds}) {
+            my $aclRow = $acls->row($aclId);
+            my $type = $aclRow->elementByName('user_group');
+            if (($type->selectedType() eq 'user' or $type->selectedType() eq 'group') and
+                ($type->printableValue() eq $name)) {
+                $acls->removeRow($aclId);
+            }
+        }
+    }
 }
 
 # Method: _preAddContact
@@ -797,6 +803,7 @@ sub _modifyGroup
 sub _delGroup
 {
     my ($self, $zentyalGroup) = @_;
+
     $self->_sambaReady() or
         return;
 
@@ -816,26 +823,10 @@ sub _delGroup
     EBox::debug("Deleting group '$dn' from samba");
     try {
         $sambaGroup->deleteObject();
+        $self->removeFromShareACLs($samAccountName);
 
-        # Remove group from shares ACLs
-        my $shares = $self->{samba}->model('SambaShares');
-        my $sharesIds = $shares->ids();
-        foreach my $shareId (@{$sharesIds}) {
-            my $shareRow = $shares->row($shareId);
-            my $acls = $shareRow->subModel('access');
-            my $aclsIds = $acls->ids();
-            foreach my $aclId (@{$aclsIds}) {
-                my $aclRow = $acls->row($aclId);
-                my $type = $aclRow->elementByName('user_group');
-                if ($type->selectedType() eq 'group' and
-                    $type->printableValue() eq $samAccountName) {
-                    $acls->removeRow($aclId);
-                }
-            }
-        }
-
-        if ($self->_groupShareEnabled($zentyalGroup)) {
-            $self->removeGroupShare($zentyalGroup);
+        if ($self->_groupShareEnabled($samAccountName)) {
+            $self->removeGroupShare($samAccountName);
         }
     } otherwise {
         my ($error) = @_;
@@ -855,9 +846,8 @@ sub _delGroup
 #
 sub _groupShareEnabled
 {
-    my ($self, $zentyalGroup) = @_;
+    my ($self, $groupName) = @_;
 
-    my $groupName = $zentyalGroup->get('cn');
     my $sharesModel = $self->{samba}->model('SambaShares');
     foreach my $id (@{$sharesModel->ids()}) {
         my $row = $sharesModel->row($id);
@@ -877,10 +867,10 @@ sub setGroupShare
         throw EBox::Exceptions::External("A name should be provided for the share.");
     }
 
-    my $oldName = $self->_groupShareEnabled($group);
+    my $groupName = $group->name();
+    my $oldName = $self->_groupShareEnabled($groupName);
     return if ($oldName and $oldName eq $shareName);
 
-    my $groupName = $group->get('cn');
     my $sharesModel = $self->{samba}->model('SambaShares');
 
     # Create or rename the share for the group
@@ -912,9 +902,8 @@ sub setGroupShare
 
 sub removeGroupShare
 {
-    my ($self, $zentyalGroup) = @_;
+    my ($self, $groupName) = @_;
 
-    my $groupName = $zentyalGroup->get('cn');
     my $sharesModel = $self->{samba}->model('SambaShares');
     my $row = $sharesModel->findValue(groupShare => $groupName);
     $sharesModel->removeRow($row->id()) if $row;
@@ -928,7 +917,8 @@ sub _groupAddOns
                    $self->{samba}->isEnabled() and
                    $self->{samba}->isProvisioned());
 
-    my $share = $self->_groupShareEnabled($zentyalGroup);
+    my $groupName = $zentyalGroup->name();
+    my $share = $self->_groupShareEnabled($groupName);
     my $args =  {
         'groupname' => $zentyalGroup->dn(),
         'share'     => $share,
