@@ -1,3 +1,6 @@
+HEAD
+	+ s4sync: Remove the group share if exists after deleting the group itself
+	+ s4sync: Remove the deleted user or group from shares ACLs
 3.2.15
 	+ Remove the use of method canonicalName for greater performance, use
 	  object DNs instead
